--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
@@ -1,11 +1,10 @@
 .ca_template_icon {color:#606E7F;width:180px;float:left;display:inline-block;background-color: #C7C5CB;margin:0px;height:290px;padding-top:10px;border-radius:20px 0px 0px 20px;}
 .ca_template {color:#606E7F;border-radius:0px 20px 20px 0px;display:inline-block;width:370px;text-align:left;float:left;overflow:auto;height:280px;background-color:#DDDADF;padding:10px;font-size:12px;}
-.ca_category {color:purple;}
-.ca_author {color:black;font-weight:bold;cursor:pointer;}
+.ca_category {color:#486dba;}
+.ca_author {color:#486dba;font-weight:bold;cursor:pointer;}
 .ca_applicationName {color:black;font-size:large;}
 .ca_repository {color:black;font-size:10px;}
 .ca_highlight {color:#1e6d18;font-weight:bold;}
-.ca_category {color:purple;}
 input.appButtons {margin:0px;}
 input.viewButton {margin:1px;}
 input.sortButton {margin:1px;}
@@ -22,11 +21,11 @@ input[type=checkbox] {width:20px;height:20px;}
 .myReadmoreButton {color:blue;}
 .displayIcon {height:96px;width:96px;}
 .displayIconTable {height:48px;width:48px;}
-.supportLink {font-weight:bold;}
-.projectLink {font-weight:bold;}
-.webLink {font-weight:bold;}
+.supportLink {font-weight:bold;color:#486dba;}
+.projectLink {font-weight:bold;color:#486dba;}
+.webLink {font-weight:bold;color:#486dba;}
 .donateLink {font-size:12px;}
-.dockerHubStar {color: magenta;font-size:15px;}
+.dockerHubStar {color:#486dba;font-size:15px;}
 .dockerDisabled {text-align:center;width:auto;color:purple;}
 .separateOfficial {text-align:center;width:auto;font-size:25px;}
 .displayBeta {cursor:pointer;}
