Update support links

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -110,10 +110,7 @@ Enable Template Developer Mode?
 &nbsp;
 : <input type="submit" name="#apply" value="Apply" id='Apply'><input type="button" id="DONE" value="Done" onclick="done()">
 
-<br>Note: When changing skins, do not hit the Back button on your browser to go back to the Apps Tab after applying the changes.  Always hit "Done"
-
-
-<center>For support for this plugin, visit here: <a href="https://forums.lime-technology.com/topic/38582-plug-in-community-applications/" target="_blank">HERE</a></center>
+<center>For support for this plugin, visit here: <a href="https://forums.unraid.net/topic/38582-plug-in-community-applications/" target="_blank">HERE</a></center>
 
 </form>
 <center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src="https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png" height=40px;></a></center>
