--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
@@ -19,20 +19,22 @@ input[type=checkbox] {width:20px;height:20px;}
 .enabledIcon {cursor:pointer;color:#005500;font-size:25px;}
 .disabledIcon {color:#040404;font-size:25px;}
 .pinned {cursor:pointer;font-size:15px;color:green;padding:3px;}
-.unpinned {cursor:pointer;font-size:15px;color:#820101;padding:3px;-webkit-transform: rotate(20deg);-moz-transform: rotate(20deg);-ms-transform: rotate(20deg);	-o-transform: rotate(20deg);	transform: rotate(20deg);}
+.unpinned {cursor:pointer;font-size:15px;color:#820101;padding:3px;}
+.pinned::after {content:"\f08d";font-family:fontAwesome;}
+.unpinned::after {content:"\f08d";font-family:fontAwesome;display:inline-block;-webkit-transform: rotate(20deg);-moz-transform: rotate(20deg);-ms-transform: rotate(20deg);	-o-transform: rotate(20deg);	transform: rotate(20deg);}
 .topRightLinks {padding-left:15px;font-weight:bold;}
-.appIcons {font-size:25px;color:#486dba;cursor:pointer;}
+.appIcons {font-size:25px;color:#486dba;cursor:pointer;padding-left:5px;padding-right:5px;}
 .appIcons:hover {text-decoration:none;}
-.appIconsPopUp {font-size:25px;color:cyan;cursor:pointer;}
+.appIconsPopUp {font-size:25px;color:cyan;cursor:pointer;padding-left:5px;padding-right:5px;}
 .appIconsPopUp:hover {text-decoration:none;}
 .myReadmore {text-align:center;}
 .myReadmoreButton {color:blue;}
 .displayIcon {height:96px;width:96px;}
-.supportLink {font-weight:bold;color:#486dba;}
+.supportLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
 .supportLink::after {content:"Support Thread"}
-.projectLink {font-weight:bold;color:#486dba;}
+.projectLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
 .projectLink::after {content:"Project Home Page"}
-.webLink {font-weight:bold;color:#486dba;}
+.webLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
 .webLink::after {content:"Web Page"}
 .donateLink {font-size:12px;}
 .donateLink::after {content:url('https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png');zoom:15%;}
