Remove bouncing bars when updating legacy mode

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -756,7 +756,7 @@ function forceUpdateButton() {
 			showConfirmButton: true,
 			closeOnConfirm: false,
 			allowOutsideClick: true,
-			showLoaderOnConfirm: true,
+			showLoaderOnConfirm: false,
 			html: true
 		}, function(isConfirm) {
 			if (isConfirm) {
