--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
@@ -10,6 +10,7 @@
 .ca_applicationName {color:black;font-size:20px;}
 .ca_repository {color:black;}
 .ca_highlight {color:#0e5d08;font-weight:bold;}
+.ca_description {color:#505E6F;}
 input.appButtons {margin:0px;}
 input.viewButton {margin:1px;}
 input.sortButton {margin:1px;}
