--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
@@ -50,6 +50,10 @@ input[type=checkbox] {width:20px;height:20px;}
 .ca_fa-edit::after {content:"\f044";font-family:fontAwesome;}
 .ca_fa-globe::after {content:"\f0ac";font-family:fontAwesome;}
 .ca_fa-update::after {content:"\f021";font-family:fontAwesome;}
+.ca_fa-stop {color:maroon;}
+.ca_fa-stop::after {content:"\f28d";font-family:fontAwesome;}
+.ca_fa-start {color:green;}
+.ca_fa-start::after {content:"\f144";font-family:fontAwesome;}
 .ca_multiselect {cursor:pointer;}
 .pageNavigation {font-size:20px;}
 .specialCategory {font-size:15px;}
